fix: fix sidebar projects collapsing when title is empty

--- a/src/app.scss
+++ b/src/app.scss
@@ -86,6 +86,10 @@ p {
     font-weight: 400;
 }
 
+::placeholder {
+    color: var(--clr-light);
+}
+
 /* Accessibility */
 @media (prefers-reduced-motion: reduce) {
 
